--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,20 +10,14 @@ body {
   padding: 0;
 }
 
-main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 83vh;
-}
-
 h1,
 h2,
 h3,
 p,
 button,
 li,
-ul {
+ul,
+label {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   padding: 0;
