--- a/client/src/css/HomePage.css
+++ b/client/src/css/HomePage.css
@@ -1,3 +1,10 @@
+#homePageMain {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 83vh;
+}
+
 #profilePicture {
   width: 30vw;
   border-radius: 200px;
