added flex to footer ul css

--- a/client/src/css/Footer.css
+++ b/client/src/css/Footer.css
@@ -8,6 +8,10 @@
   flex-direction: column;
 }
 
+#footerUl {
+  display: flex;
+}
+
 @media only screen and (min-width: 1183px) {
   .footer {
     flex-direction: row;
