--- a/client/src/css/Form.css
+++ b/client/src/css/Form.css
@@ -53,6 +53,18 @@
   margin: 2% 0;
 }
 
+.LinkForm {
+  color: white;
+  margin-top: 5%;
+  text-decoration: underline;
+}
+
+small {
+  color: white;
+  margin-top: 3%;
+  text-align: center;
+}
+
 @media only screen and (min-width: 1183px) {
   .formGobal,
   .formGobalConnexion,
