--- a/client/src/css/NavBar.css
+++ b/client/src/css/NavBar.css
@@ -33,6 +33,8 @@
   height: auto;
   min-width: 0;
   border-radius: 0;
+  border: none;
+  font-size: 1em;
 }
 
 @media only screen and (min-width: 1183px) {
