--- a/client/src/css/PopUp.css
+++ b/client/src/css/PopUp.css
@@ -44,6 +44,10 @@
 #popUpButton {
   background-color: transparent;
   text-decoration: underline;
+  border: none;
+  font-size: 1em;
+  margin-top: 1%;
+  font-weight: bold;
 }
 
 @media only screen and (min-width: 1183px) {
