--- a/client/src/css/Admin.css
+++ b/client/src/css/Admin.css
@@ -12,9 +12,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 70%;
 }
 
-.AdminButton {
+.AdminButton,
+.AdminButtonVisible {
   background-color: transparent;
   border: 1px solid var(--main-color);
   border-radius: 0;
@@ -22,12 +24,23 @@
   padding: 4em;
 }
 
-/* .hidden {
+.AdminButtonVisible {
+  margin: 5% 0 0 0;
+}
+
+.hidden {
   display: none;
-} */
+}
 
 .AdminUlVisible {
   display: block;
+  margin-bottom: 10%;
+}
+
+.modifyList {
+  font-size: 1.2em;
+  text-decoration: underline;
+  margin: 2% 8%;
 }
 
 @media only screen and (min-width: 1183px) {
@@ -38,8 +51,13 @@
   .AdminDiv {
     width: 30vw;
   }
-  .AdminButton {
+  .AdminButton,
+  .AdminButtonVisible {
     margin: 15% 0;
     font-size: 1.2em;
+  }
+
+  .AdminButtonVisible {
+    margin: 15% 0 4% 0;
   }
 }
