--- a/client/src/css/projets/Projets.css
+++ b/client/src/css/projets/Projets.css
@@ -1,7 +1,14 @@
 .projectImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.projectImageContainter {
   border: 2px solid var(--main-color);
   border-radius: 5px;
   width: 70vw;
+  overflow: hidden;
 }
 
 #projectsMap {
@@ -32,7 +39,7 @@
 }
 
 @media only screen and (min-width: 1183px) {
-  .projectImage {
+  .projectImageContainter {
     width: 25vw;
   }
 }
