--- a/client/src/css/About.css
+++ b/client/src/css/About.css
@@ -6,6 +6,11 @@
   min-height: 86vh;
 }
 
+.h3About {
+  font-size: 1.4em;
+  margin-bottom: 1%;
+}
+
 #experiencesDiv {
   min-height: 30vh;
   display: flex;
@@ -54,6 +59,22 @@
   height: 80px;
   align-items: center;
   justify-content: center;
+}
+
+@media only screen and (min-width: 625px) and (max-width: 1183px) {
+  .imageAbout,
+  .aboutHobbiesLi {
+    width: 100px;
+  }
+
+  .aboutHobbiesLi {
+    height: 100px;
+  }
+
+  #aboutInfoDiv,
+  #experiencesDiv {
+    width: 50vw;
+  }
 }
 
 @media only screen and (min-width: 1183px) {
